--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,54 @@
-<p>login works!</p>
+<!-- // Title: NodeBucket
+// Author: Professor Krasso
+// Date: Jan 15 2023
+// Modified By: Ferdinand Detres Jr
+// Attributions:
+https://www.google.com/books/edition/Getting_MEAN_with_Mongo_Express_Angular/sTgzEAAAQBAJ?hl=en&gbpv=1&dq=Getting+MEAN+with+MongoDB,+Express,+Angular,+and+Node+2+nd+Edition%3B+Simon+Holmes+and+Clive+Harber%3B+Manning+Publications+2019+pdf&printsec=frontcover
+//http://primefaces.org/primeng/messages
+https://github.com/angular/flex-layout
+https://angular.io/api/forms/NgForm
+// In-Class tutorials -->
+
+<div fxLayout="column">
+    <mat-card fxFlex class="login-container">
+        <mat-card-header>
+            <mat-card-title class="login-title">
+                Employee Log-in Page
+                <br /> <br />
+                <mat-card-subtitle class="login-subtitle">
+                    You must enter a valid employee ID to continue.
+                </mat-card-subtitle>
+            </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <!-- p-messages from PrimeNg -->
+            <p-messages [(value)]="errorMessages" [enableService]="false"></p-messages>
+            <mat-card class="mat-elevation-z0" fxLayout="column" fxLayoutGap="10px">
+                <!-- employee login form - on submit, the login() function is triggered and the login form is reset -->
+                <form [formGroup]="loginForm" (ngSubmit)="login(); loginForm.reset();">
+                    <mat-card-content class="mat-elevation-z0">
+                        <mat-form-field appearance="fill" style="width: 100%;">
+                            <input matInput formControlName="empId" placeholder="Employee ID" />
+                            <!-- error message to ensure an employee ID has been entered -->
+                            <mat-error
+                                *ngIf="loginForm.controls['empId'].hasError('required') && loginForm.controls['employeeId'].touched">
+                                Employee ID is a required field.
+                            </mat-error>
+                            <!-- error message to ensure an employee ID is a numerical value -->
+                            <mat-error
+                                *ngIf="loginForm.controls['empId'].hasError('pattern') && loginForm.controls['empId'].touched">
+                                Employee ID must be a numerical value.
+                            </mat-error>
+                        </mat-form-field>
+                    </mat-card-content>
+                    <mat-card-actions>
+                        <!-- the submit button is only clickable if a value has been entered in the login form -->
+                        <button type="submit" fxFlex mat-raised-button [disabled]="!loginForm.valid"
+                            style="height: 50px; font-size: 18px; background-color: #740001; color: white;">Log
+                            in</button>
+                    </mat-card-actions>
+                </form>
+            </mat-card>
+        </mat-card-content>
+    </mat-card>
+</div>
