--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -1,17 +1,30 @@
+<!-- // Title: NodeBucket
+// Author: Professor Krasso
+// Date: Jan 15 2023
+// Modified By: Ferdinand Detres Jr
+// Attributions:
+https://www.google.com/books/edition/Getting_MEAN_with_Mongo_Express_Angular/sTgzEAAAQBAJ?hl=en&gbpv=1&dq=Getting+MEAN+with+MongoDB,+Express,+Angular,+and+Node+2+nd+Edition%3B+Simon+Holmes+and+Clive+Harber%3B+Manning+Publications+2019+pdf&printsec=frontcover
+// In-Class tutorials -->
+
+
 <div fxLayout="column">
 
   <!-- navigation -->
   <nav fxFlex>
-    <mat-toolbar>
+    <mat-toolbar style="border-bottom:15px solid #df230a; height:100px;" color="primary">
       <!-- navbar container -->
       <div class="navbar-container">
         <!-- logo -->
         <button class="logo" routerLink="/" mat-button>nodebucket</button>
 
-        <button class="navbar-link" routerLink="/" mat-button>Home</button>
         <button class="navbar-link" mat-button>About</button>
+        <button class="navbar-link" mat-button>Contact Us</button>
       </div>
-
+      <div fxFlex>
+        <button (click)="logout()">
+          LogOut
+        </button>
+      </div>
     </mat-toolbar>
   </nav>
 
@@ -27,7 +40,8 @@
     <footer class="footer">
       <mat-toolbar class="footer-content">
         <p>
-          &copy; {{year | date: 'yyyy'}} - nodebucket - <a href="https://www.bellevue.edu/" class="bu-link" target="_blank">Bellevue University</a>
+          &copy; {{year | date: 'yyyy'}} - nodebucket - <a href="https://www.bellevue.edu/" class="bu-link"
+            target="_blank">Bellevue University</a>
         </p>
       </mat-toolbar>
     </footer>
