--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -32,7 +32,7 @@
 }
 
 .mat-card-header {
-  background-color: #740001;
+  background-color: #bd700b;
   padding-left: 8%;
   padding-top: 15px;
   color: white;
