--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -22,7 +22,7 @@ https://www.google.com/books/edition/Getting_MEAN_with_Mongo_Express_Angular/sTg
       </div>
       <div fxFlex>
         <button (click)="logout()">
-          LogOut
+          LogOut From the NodeBucket App
         </button>
       </div>
     </mat-toolbar>
