--- a/src/app/shared/auth-layout/auth-layout.component.html
+++ b/src/app/shared/auth-layout/auth-layout.component.html
@@ -1,1 +1,8 @@
+<!-- // Date: Jan 15 2023
+// Modified By: Ferdinand Detres Jr
+// Attributions:
+https://www.google.com/books/edition/Getting_MEAN_with_Mongo_Express_Angular/sTgzEAAAQBAJ?hl=en&gbpv=1&dq=Getting+MEAN+with+MongoDB,+Express,+Angular,+and+Node+2+nd+Edition%3B+Simon+Holmes+and+Clive+Harber%3B+Manning+Publications+2019+pdf&printsec=frontcover
+// In-Class tutorials -->
+
+
 <router-outlet></router-outlet>
