--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,10 +11,11 @@ https://material.angular.io/cdk/drag-drop/overview
 
 <div fxLayout="column" class="main-welcome">
   <h1 class="title">
-    Welcome to WEB 450's - Nodebucket Project <br />, <strong>{{empId}}</strong>
+    Welcome to - Nodebucket <br />, <strong>{{empId}}</strong>
 
   </h1>
 </div>
+<br>
 <!-- create task wrapper-->
 <div fxFlex>
   <div class="task-container mat-elevation-z4" fxLayout="column">
@@ -58,6 +59,7 @@ https://material.angular.io/cdk/drag-drop/overview
     </mat-card>
   </div>
 </div>
+<br>
 
 <!-- task listings -->
 <div fxFlex>
