--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -7,4 +7,45 @@
 https://angular.io/api/forms/FormBuilder
 https://material.angular.io/cdk/drag-drop/overview
 https://material.angular.io/cdk/drag-drop/overview
+ https://codepen.io/ZonFire99/pen/EaYmGV
+ // https://codepen.io/codetrail/pen/uHvpl
+// https://codepen.io/kaypooma/pen/ehfjC
 // In-Class tutorials -->
+
+
+<!-- Famous 404 Page -->
+
+<html>
+<div class="error">
+
+    <div class="wrap">
+        <div class="404">
+
+            <span class="green">&lt;!</span><span>DOCTYPE html</span><span class="green">&gt;</span>
+            <span class="orange">&lt;html&gt;</span>
+            <span class="orange">&lt;style&gt;</span>
+
+            <span class="green">everything</span>:<span class="blue">awesome</span>;
+
+            <span class="orange">&lt;/style&gt;</span><br>
+            <span class="orange">&lt;body&gt;</span><br>
+            <p class="bigError">ERROR 404!</p>
+            <p class="bigError">FILE NOT FOUND!</p><br>
+            <h1><span class="comment">&lt;!--You are not Worthy to find the page--&gt;
+                </span></h1>
+            <span class="orange"></span>
+
+            <br />
+            <span class="info">
+                <br />
+                <span class="orange">&nbsp;&lt;/body&gt;</span>
+                <br />
+                <span class="orange">&lt;/html&gt;</span>
+            </span>
+            <button mat-raised-button color="accent" routerLink="/">CLick HeRE to ACCEPT DEFEAT</button>
+
+        </div>
+    </div>
+</div>
+
+</html>
