--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -61,43 +61,58 @@ https://material.angular.io/cdk/drag-drop/overview
 </div>
 <br>
 
-<!-- task listings -->
 <div fxFlex>
-  <div fxLayout="row" fxLayoutGap="15px" class="task-container" style="margin-top: 20px">
-    <!-- todo col -->
+  <div fxLayout="row" fxLayoutGap="15px" class="task-container" style="margin-top: 10px;">
+    <!-- first row -->
     <div fxFlex>
       <mat-card class="mat-elevation-z0">
-        <mat-card-title>ToDo</mat-card-title>
-
-        <mat-card-content>
-          <div class="task-column">
-            <div *ngFor="let item of todo">
+        <mat-card-title>
+          ToDo
+        </mat-card-title>
+        <mat-card-content> <!--implements drag and drop with cdkDropList -->
+          <div fxLayout="column" fxLayoutGap="10px" cdkDropList #todoList="cdkDropList" [cdkDropListData]="todo"
+            [cdkDropListConnectedTo]="[doneList]" (cdkDropListDropped)="drop($event)" class="task-column">
+            <div *ngFor="let item of todo" cdkDrag>
               <mat-card class="mat-elevation-z0 task-card">
                 <mat-card-content>
                   <div fxLayout="row">
-                    <!-- task value -->
-                    <div fxFlex>{{ item.text }}</div>
-                    <!-- code to delete task -->
+                    <div fxFlex>
+                      {{ item.text }}
+                    </div>
+                    <div fxFlex fxLayoutAlign="end" style="margin-top: -7px;">
+                      <!-- delete task button -->
+                      <button mat-icon-button (click)="deleteTask(item._id)">
+                        <mat-icon color="warn">delete</mat-icon>
+                      </button>
+                    </div>
                   </div>
                 </mat-card-content>
+
               </mat-card>
             </div>
+            <!-- end of the for loop -->
           </div>
         </mat-card-content>
       </mat-card>
     </div>
-
-    <!-- done col -->
+    <!-- end of first row -->
+    <!-- Done Div -->
     <div fxFlex>
       <mat-card class="mat-elevation-z0">
         <mat-card-title>Done</mat-card-title>
-        <mat-card-content>
-          <div class="task-column">
-            <div *ngFor="let item of done">
+        <mat-card-content> <!-- implements cdkDropList for drag and drop-->
+          <div fxLayoutGap="10px" cdkDropList #doneList="cdkDropList" [cdkDropListData]="done"
+            [cdkDropListConnectedTo]="[todoList]" (cdkDropListDropped)="drop($event)" class="task-column">
+            <div *ngFor="let item of done" cdkDrag>
               <mat-card class="mat-elevation-z0 task-card">
                 <div fxLayout="row">
                   <div fxFlex>
                     {{ item.text }}
+                  </div>
+                  <div fxFlex fxLayoutAlign="end" style="margin-top: -7px;">
+                    <button mat-icon-button (click)="deleteTask(item._id)"> <!-- delete task button -->
+                      <mat-icon color="warn">delete</mat-icon>
+                    </button>
                   </div>
                 </div>
               </mat-card>
@@ -106,6 +121,7 @@ https://material.angular.io/cdk/drag-drop/overview
         </mat-card-content>
       </mat-card>
     </div>
+
     <!-- end done col -->
   </div>
 </div>
