--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -19,6 +19,7 @@ https://material.angular.io/cdk/drag-drop/overview
                         href="https://unsplash.com/@art_maltsev?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Artem
                         Maltsev</a> on <a
                         href="https://unsplash.com/s/photos/magic?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+                    <img src="../../../assets/artem-maltsev-3n7DdlkMfEg-unsplash.jpg" height="100px" width="200px">
                 </em>
             </div>
         </div>
