--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,16 +9,16 @@ https://material.angular.io/cdk/drag-drop/overview
 https://material.angular.io/cdk/drag-drop/overview
 // In-Class tutorials -->
 
-<div fxLayout="column" class="main-welcome">
+<div fxLayout="row" class="main-welcome">
   <h1 class="title">
-    Welcome to - Nodebucket <br />, <strong>{{empId}}</strong>
+    Welcome to - Nodebucket <br /> <strong>{{empId}}</strong>
 
   </h1>
 </div>
 <br>
 <!-- create task wrapper-->
 <div fxFlex>
-  <div class="task-container mat-elevation-z4" fxLayout="column">
+  <div class="task-container mat-elevation-z4" fxLayout="row">
     <mat-card>
       <!-- add task form group -->
       <form [formGroup]="taskForm" (ngSubmit)="createTask(); taskForm.reset()">
@@ -60,6 +60,10 @@ https://material.angular.io/cdk/drag-drop/overview
   </div>
 </div>
 <br>
+<br>
+<br>
+<br>
+
 
 <div fxFlex>
   <div fxLayout="row" fxLayoutGap="15px" class="task-container" style="margin-top: 10px;">
@@ -97,7 +101,7 @@ https://material.angular.io/cdk/drag-drop/overview
     </div>
     <!-- end of first row -->
     <!-- Done Div -->
-    <div fxFlex>
+    <div>
       <mat-card class="mat-elevation-z0">
         <mat-card-title>Done</mat-card-title>
         <mat-card-content> <!-- implements cdkDropList for drag and drop-->
