--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,8 +11,7 @@ https://material.angular.io/cdk/drag-drop/overview
 
 <div fxLayout="row" class="main-welcome">
   <h1 class="title">
-    Welcome to - Nodebucket <br /> <strong>{{empId}}</strong>
-
+    Welcome to - NodeBucket<br /> <strong>{{empId}}</strong>
   </h1>
 </div>
 <br>
