--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -5,8 +5,7 @@
 // Attributions:
 //www.google.com/books/edition/Getting_MEAN_with_Mongo_Express_Angular/sTgzEAAAQBAJ?hl=en&gbpv=1&dq=Getting+MEAN+with+MongoDB,+Express,+Angular,+and+Node+2+nd+Edition%3B+Simon+Holmes+and+Clive+Harber%3B+Manning+Publications+2019+pdf&printsec=frontcover
 // In-Class tutorials */
-
-.main-welcome {
+background .main-welcome {
   margin-top: 30px;
 }
 
@@ -21,17 +20,17 @@
 }
 
 .task-container {
-  width: 35%;
+  width: 50%;
   margin: 0 auto;
 }
 
 .task-column {
-  border: 1px solid #ccc;
+  border: 1px solid rgb(209, 87, 87);
   min-height: 68px;
-  border-radius: 4px;
+  border-radius: 5px;
   overflow: hidden;
   display: block;
-  background: white;
+  background: rgb(244, 242, 242);
 }
 
 .task-card {
