--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -29,8 +29,8 @@ https://material.angular.io/cdk/drag-drop/overview
 
             <span class="orange">&lt;/style&gt;</span><br>
             <span class="orange">&lt;body&gt;</span><br>
-            <p class="bigError">ERROR 404!</p>
-            <p class="bigError">FILE NOT FOUND!</p><br>
+            <p class="bigError">ERROR 500!</p>
+            <p class="bigError">Internal Server Error!</p><br>
             <h1><span class="comment">&lt;!--You are not Worthy to find the page--&gt;
                 </span></h1>
             <span class="orange"></span>
